test/library/standard/Communication/errors.putNegSize.good
errors.chpl:22: error: halt reached - Number of bytes (-10) for Communication.put is negative.
